# win-cmd-fixer

./: LICENSE  README.md  pyproject.toml
src/win_cmd_fixer/: __init__.py  args.py  commands.py  parser.py
tests/test_parse/: test_cat.py  test_cd.py  test_copy.py  test_dir.py  test_move.py  test_type.py
tests/test_parse_cmd/: test_cp.py  test_del.py  test_ls.py  test_move.py  test_mv.py
tests/test_parse_unix/: test_cat.py  test_cd.py  test_copy.py  test_cp.py  test_del.py  test_dir.py  test_ls.py  test_move.py  test_mv.py  test_type.py
tests/test_unit/: test_split_args.py
